syntax = "proto3";
package stats.service.analyzer;

option java_package = "ru.practicum.ewm.grpc.stats.analyzer";

import "google/protobuf/empty.proto";

import "stats/messages/recomendations.proto";

service RecommendationsController {
    rpc GetRecommendationsForUser (stats.message.recomendations.UserPredictionsRequestProto)
        returns (stats.message.recomendations.RecommendedEventProto);

    rpc GetSimilarEvents (stats.message.recomendations.SimilarEventsRequestProto)
        returns (stream stats.message.recomendations.RecommendedEventProto);

    rpc GetInteractionsCount (stats.message.recomendations.InteractionsCountRequestProto)
        returns (stats.message.recomendations.RecommendedEventProto);

}